tests/diagnostics/vec_no_annotation.kal
# vec() needs an expected Vec<T> type to infer its element type.
fn make() -> i64 = { let v = vec(); 0 };
printi(make());
